[gd_scene load_steps=6 format=2]

[ext_resource path="res://shaders/gameoflife_step.shader" type="Shader" id=2]
[ext_resource path="res://scripts/GameOfLifeViewport.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("ViewportContainer1/Viewport1")

[node name="GameOfLifeViewport" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ViewportContainer1" type="ViewportContainer" parent="."]
margin_left = -512.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )

[node name="Viewport1" type="Viewport" parent="ViewportContainer1"]
size = Vector2( 512, 512 )
own_world = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 2
render_target_update_mode = 3

[node name="GameOfLifeStep1" type="TextureRect" parent="ViewportContainer1/Viewport1"]
material = SubResource( 2 )
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )

[node name="ViewportContainer2" type="ViewportContainer" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )

[node name="Viewport2" type="Viewport" parent="ViewportContainer2"]
size = Vector2( 512, 512 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 2
render_target_update_mode = 3

[node name="GameOfLifeStep2" type="TextureRect" parent="ViewportContainer2/Viewport2"]
material = SubResource( 3 )
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )
texture = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
__meta__ = {
"_editor_description_": "This provides a small delay to get everything running and then connects the two viewport shader textures to one another"
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
